--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask==2.3.3
 SQLAlchemy==2.0.21
 Flask-SQLAlchemy==3.0.5
-openai==1.3.5
+openai>=1.55.0
 requests==2.31.0
 python-dotenv==1.0.0
 Werkzeug==2.3.7
@@ -9,4 +9,5 @@ Jinja2==3.1.2
 numpy>=1.26.0
 pandas>=2.1.0
 plotly==5.17.0
-Flask-CORS==4.0.0 
+Flask-CORS==4.0.0
+reportlab==4.0.4 
