--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask==2.3.3
 SQLAlchemy==2.0.21
 Flask-SQLAlchemy==3.0.5
-openai>=1.55.0
+openai==0.28
 requests==2.31.0
 python-dotenv==1.0.0
 Werkzeug==2.3.7
